2010-11-15  Peter Rosin  <peda@lysator.liu.se>

	compile: clear the `eat' variable earlier.
	* lib/compile: Clear the `eat' variable earlier.
	($scriptversion): Update.
	* tests/compile3.test: Prevent regressions.

2010-10-07  Peter Rosin  <peda@lysator.liu.se>

	depcomp: add new one-pass depmode for MSVC 7 and later.
	* lib/depcomp: Add new depmodes 'msvc7' and 'msvc7msys' which
	make use of the -showIncludes option added in MSVC 7.
	* m4/depend.m4 (_AM_DEPENDENCIES): Handle the new depmodes
	similarly to 'msvisualcpp' and 'msvcmsys' as MSVC does not
	support the -o option.

2010-10-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: fix ar-lib.test for echo that interprets backslashes.
	* tests/ar-lib.test: Use printf instead of echo.  Avoid test -a.
	More robust quoting.

2010-09-21  Peter Rosin  <peda@lysator.liu.se>

	compile: implement library search to support MSVC static linking
	* lib/compile (func_cl_wrapper): Implement library search and
	-static option so that the user can select whether to prefer
	dll import libraries or static libraries.  This enables MSVC to
	link against dlls generated by libtool without requiring libtool
	or workarounds such as -lfoo.dll etc.  Makes the tests/static.at
	test case in libtool pass.
	* tests/compile3.test: Don't trip up if there happens to exist
	a "foo" library in the library search path.
	* tests/compile6.test: New test, verifying the library search.
	* tests/Makefile.am (TESTS): Update.

2010-09-02  Peter Rosin  <peda@lysator.liu.se>

	Make ar-lib support backslashed files in archives.
	* lib/ar-lib: If an archive member contains a backslash, make sure
	it is escaped when the archive member is extracted.
	* tests/ar-lib.test: Test the above.

2010-08-31  Peter Rosin  <peda@lysator.liu.se>

	Do file name conversion for object files in the compile wrapper.
	* lib/compile (func_cl_wrapper): Do file name conversion for object
	files (i.e. extensions .obj, .OBJ, .o and .O) if needed.