@@ -16,6 +16,7 @@
 
 # Make sure `ar-lib' wraps the Microsoft Library Manager (lib) correctly
 
+required=xsi-shell
 . ./defs || Exit 1
 
 set -e
