@@ -16,6 +16,7 @@
 
 # Make sure `compile' wraps the Microsoft C/C++ compiler (cl) correctly
 
+required=xsi-shell
 . ./defs || Exit 1
 
 set -e
