@@ -16,6 +16,7 @@
 
 # Make sure `compile' searches libraries correctly
 
+required=xsi-shell
 . ./defs || Exit 1
 
 set -e
