@@ -219,6 +219,15 @@ do
       echo "$me: running texi2dvi -o /dev/null --version"
       ( texi2dvi -o /dev/null --version ) || exit 77
       ;;
+    xsi-shell)
+      # Try some XSI features.
+      echo "$me: trying some XSI constructs"
+      ( _am_dummy="a/b/c"
+	test "${_am_dummy##*/},${_am_dummy%/*},${_am_dummy#??}"${_am_dummy%"$_am_dummy"}, \
+		= c,a/b,b/c, \
+	&& eval 'test $(( 1 + 1 )) -eq 2 \
+	&& test "${#_am_dummy}" -eq 5' ) || exit 77
+      ;;
     # Generic case: the tool must support --version.
     *)
       echo "$me: running $tool --version"
