@@ -1,3 +1,11 @@
+2010-11-16  Peter Rosin  <peda@lysator.liu.se>
+
+	Skip MSVC oriented tests if the shell is not capable.
+	* tests/defs: New required entry 'xsi-shell'.
+	* tests/ar-lib.test, tests/compile3.test, tests/compile6.test:
+	Require a XSI capable shell.
+	Reported by Ralf Wildenhues.
+
 2010-11-15  Peter Rosin  <peda@lysator.liu.se>
 
 	compile: clear the `eat' variable earlier.
